--- a/sge/pruebasJS/arrayconbucle.html
+++ b/sge/pruebasJS/arrayconbucle.html
@@ -15,7 +15,7 @@
   let match = false
 
   array.forEach(day => {
-    if (input.toLowerCase() === day.toLowerCase()) {
+    if (input.toLowerCase() == day.toLowerCase()) {
       match = true; 
     }
   });
