--- a/sge/pruebasJS/arrayconbucleyFuncionFlecha.html
+++ b/sge/pruebasJS/arrayconbucleyFuncionFlecha.html
@@ -14,6 +14,12 @@
   let input = prompt("Introduce un día de la semana: ")
   let match = false
 
+  array.forEach((dia) => {
+    if (dia = input) {
+      console.log("Sí,%s es un día de la semana %s", input, input);
+    } 
+  });
+
 
 </script>
 
